Time picker alignment, shadow and color fixes and cleanup

--- a/src/css/autocomplete.css
+++ b/src/css/autocomplete.css
@@ -1,5 +1,6 @@
 .v-autocomplete-input {
   margin-bottom: 24px;
+  margin-left: 16px;
   padding: 10px 15px;
   width: calc(100% - 32px);
   outline: none;
